--- a/index.html
+++ b/index.html
@@ -5,41 +5,54 @@
         <title>Reservia - Votre site de réservation d'hébergement en ligne pour tous vos déplacements</title> <!--Depending on SEO Keywords analysis-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--META:VP permets d'initialisé la largeur des écrans-->
         <meta name="author" content="La boiboiserie">
-        <meta name="description" content="Trouvez l'hébergement de vos rêves pour des vacances de reve" /> <!--Depending on SEO Keywords analysis---> 
-        <meta name="keywords" content="hébergement, hotel, ...."> <!--Not used by main search engine like google or bing---> 
+        <meta name="description" content="Trouvez l'hébergement de vos rêves pour des vacances de reve" /> <!--Depending on SEO Keywords analysis--> 
+        <meta name="keywords" content="hébergement, hotel, ...."> <!--Not used by main search engine like google or bing--> 
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script> <!--Not used for P2 - only CSS effect-->
         <link rel="icon" href="images/logo/Favicon.png" /> <!-- As suggestion only -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">   <!--Police font raleway - thin 100-->
-        <script src="https://kit.fontawesome.com/349d059d21.js" crossorigin="anonymous"></script> <!--intégration des font awesome-->
+        <script src="https://kit.fontawesome.com/349d059d21.js" crossorigin="anonymous"></script> <!--Font awesome implementation -->
 <!--Minimalhead template for basic SEO -->
     </head>
     <body>
         <header class="header"> <!-- Grid tag, 3 columns? (1 logo, 1 for nav 1 for login)-->
             <img id="logo" src="images/logo/Reservia@3x.png" alt="Reservia_reservation_hebergement_logo">
             <nav>
-                 <ul id=menu>
-                    <li id=menu><a href="index.html">hébergement</a></li>
-                    <li id=menu><a href="index.html">Activité</a></li>
-                    <li><a href="login.html">S'inscrire</a></li>
+                 <ul>
+                    <li><a href="#hebergement">hébergement</a></li>
+                    <li><a href="#activite">Activité</a></li>
+                    <li><a href="#">S'inscrire</a></li>
                 </ul>
             </nav>
         </header>
         
         <section class="filtres">
-            <h1 class="Titre">Trouvez votre <strong>hébergement</strong> pour des vacances de reve </br>
-            En plein <strong>centre ville</strong> ou en <strong>pleine nature</strong></h1>
-            <a href="login.html">Economique</a>
-            <a href="login.html">Familial</a>
-            <a href="login.html">Romantique</a>
-            <a href="login.html">Animaux autorisés</a>
-            <!-- Not JS only css effect - Not linked to a page see if Href tag is relevant here-->
-            <p>Plus de  logements sont disponibles dans cette visite</p> <!-- Need a picto-->
+            <h1 class="Titre">Trouvez votre <strong>hébergement</strong> pour des vacances de reve En plein <strong>centre ville</strong> ou en <strong>pleine nature</strong></h1>
+            <form action="index.html">
+                <div class="location">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <input class="search" type="search" name="search-text" value="Marseille,France" >    <!--id = identication du form & Q variable envoyé en serveur--> 
+                <input class="submit" type="submit" value="Rechercher" />   <!-- <button>Rechercher</button> générique java script-->
+            </form>
+            <div>
+                <div class="filtre">
+                    <div class="billet">
+                        <i class="fas fa-money-bill-wave"></i>
+                    </div>
+                    <p class=filtre__menu>Economique</p>
+                </div>
+                <a href="#">Familial</a>
+                <a href="#">Romantique</a>
+                <a href="#">Animaux autorisés</a>
+                <!-- Not JS only css effect - Not linked to a page see if Href tag is relevant here-->
+                <p>Plus de  logements sont disponibles dans cette visite</p> <!-- Need a picto-->
+            </div>
         </section>
             
         <section class="hebergement"> 
-            <h2>Hébergement à Marseille</h2>
+            <h2 id="hebergement">Hébergement à Marseille</h2>
             <article class="card1"> <!--Definition de la carte parent de la section hénergement-->
                 <div class="card1__thumb"> <!--intégration de l'imag en thumb et différent si cliqué /intégrer dans un div pour contenir l'image-->
                     <a href="images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
@@ -133,7 +146,7 @@
             afficher plus
         </section>
         <section class="populaire"> 
-            <h2>Les plus populaire</h2>            
+            <h2 id="activite">Les plus populaire</h2>            
             <article class="card2">
                 <div class="card2__thumb"> 
                     <a href="images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" 
