--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="hébergement, hotel, ...."> <!--Not used by main search engine like google or bing--> 
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="images/logo/Favicon.png" /> <!-- As suggestion only -->
-        <link rel="preconnect" href="https://fonts.gstatic.com/%22%3E
+        <link rel="preconnect" href="https://fonts.gstatic.com/%22%3E">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">        <!--Police font raleway - thin 100-->
         <script src="https://kit.fontawesome.com/349d059d21.js" crossorigin="anonymous"></script> <!--Font awesome implementation -->
 <!--Minimalhead template for basic SEO -->
@@ -63,11 +63,11 @@
                     <div class="recherche__filtre__fas">
                         <i class="fas fa-dog"></i>
                     </div>
-                    <p class="recherche__filtre__text">Animaux Autourisés</p>
+                    <p class="recherche__filtre__text">Animaux Autorisés</p>
                 </div>
              </div>
             <div class="information">
-                <div class="informatio__fa">
+                <div class="information__fa">
                     <i class="fas fa-info"></i>
                 </div>
                 <p >Plus de  logements sont disponibles dans cette visite</p> <!-- le 500 viens pobablement du site -->
