--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
                 <article class="card2">
                     <div class="card2__thumb"> 
-                        <img class="card2__thumb__img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                        <img class="card2__thumb__img" src="images/hebergement resized/emile-guillemot-Bj_rcSC5XfE-unsplash (1).jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                     </div>
                     <div>
                         <h3>hôtel le soleil du matin</h3>
@@ -188,7 +188,7 @@
                 </article>
                 <article class="card2">
                     <div class="card2__thumb"> 
-                        <img class="card2__thumb__img"  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                        <img class="card2__thumb__img"  src="images/hebergement resized/aw-creative-VGs8z60yT2c-unsplash (1).jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                     </div>
                     <div>
                         <h3>Au coeur de l'eau Chambre d'hôtes</h3>
@@ -204,7 +204,7 @@
                 </article>
                 <article class="card2">
                     <div class="card2__thumb"> 
-                        <img class="card2__thumb__img"  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                        <img class="card2__thumb__img"  src="images/hebergement resized/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                     </div>
                     <div>
                         <h3>hotel Tout bleu et Blanc</h3>
