--- a/index.html
+++ b/index.html
@@ -242,28 +242,28 @@
             <h2>Activités à Marseille</h2>  
             <div class="activity__article">       
                <article class="carda card3">
-                <img class="imXL" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                   
+                <div class="card3_contenaire"><img class="imXL" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" /> </div>                  
                 <h3>Vieux port</h3>
                 </article>
                 <article class="cardb card3">                    
-                        <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash2.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                    
+                    <div class="card3_contenaire">  <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash2.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />    </div>                
                     <h3>Fort de Pomègues</h3>                    
                 </article>
                  <article class="card3">                    
-                        <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                    
+                    <div class="card3_contenaire">   <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />     </div>               
                     <h3>Îles du frioul</h3>                   
                 </article>
                 <article class="card3">
                     
-                        <img class="imXL" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                    
+                    <div class="card3_contenaire">      <img class="imXL" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />    </div>                
                     <h3>Parc National des Calanques</h3>                     
                 </article>
                 <article class="card3">                                   
-                        <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                    
+                    <div class="card3_contenaire">         <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />      </div>              
                     <h3>Notre-Dame-de-la-Garde</h3>                  
                 </article>                
                      <article class="card3">
-                          <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                    
+                        <div class="card3_contenaire">           <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />    </div>                
                     <h3>Parc Longchamp</h3>                   
                 </article>
             </div>   
