--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="recherche__location">
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <input class="search" type="search" name="search-text" value="Marseille, France" >    <!--id = identication du form & Q variable envoyé en serveur--> 
+                <input class="search" type="search" name="search-text" placeholder="Marseille, France" >    <!--id = identication du form & Q variable envoyé en serveur--> 
                 <button name="submit">
                     <span class="normal">Rechercher</span>
                     <span class="responsive">
