--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <img id="header__Logo__reservia" src="images/logo/Reservia@3x.png" alt="Reservia_reservation_hebergement_logo">
                 
             
-                <div class="header__menu__list__hoover"><a href="#hebergement"  title="Hébergement">hébergement</a></div> 
+                <div class="header__menu__list__hoover"><a href="#hebergement"  title="Hébergement">Hébergement</a></div> 
                 <div class="header__menu__list__hoover"><a href="#activite" title="Activités">Activité</a></div> 
                 <div ><a href="#" title="S'inscrire" id="log">S'inscrire</a>         </div>        
             </nav>
@@ -89,7 +89,7 @@
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"  alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Auberge de la Cannebière </h3> <!--Titre de l'article en H3 pour le SEO-->
-                            <p >Nuit à partir de <em>25€</em></p>  <!--Paragraphe avec intégration de la balise em (ou autre de moindre importance) pour la mise en gras-->
+                            <p >Nuit à partir de <strong>25€</strong></p>  <!--Paragraphe avec intégration de la balise em (ou autre de moindre importance) pour la mise en gras-->
                             <div class="card__stars"> <!--Intégration des étoiles block parent pour uiliser le display inline-flex il s'agit d'une option code car sans retour serveur-->
                                 <i class="fas fa-star blue"></i><!--etoile bleu-->
                                 <i class="fas fa-star blue"></i>
@@ -105,7 +105,7 @@
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel du port</h3>
-                            <p >Nuit à partir de 52<em>€</em></p>  
+                            <p >Nuit à partir de 52<strong>€</strong></p>  
                             <div class="card__stars"> 
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star blue"></i>
@@ -121,7 +121,7 @@
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel Les mouettes</h3>
-                            <p >Nuit à partir de 76<em>€</em></p>  
+                            <p >Nuit à partir de 76<strong>€</strong></p>  
                             <div class="card__stars"> 
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star blue"></i>
@@ -137,7 +137,7 @@
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel de la mer</h3>
-                            <p >Nuit à partir de 46<em>€</em></p>  
+                            <p >Nuit à partir de 46<strong>€</strong></p>  
                             <div class="card__stars">
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star blue"></i>
@@ -153,7 +153,7 @@
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Auberge Le Panier</h3> 
-                            <p >Nuit à partir de 23<em>€</em></p>  
+                            <p >Nuit à partir de 23<strong>€</strong></p>  
                             <div class="card__stars"> 
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star blue"></i>
@@ -169,7 +169,7 @@
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel chez Amina</h3> 
-                            <p >Nuit à partir de 96<em>€</em></p> 
+                            <p >Nuit à partir de 96<strong>€</strong></p> 
                             <div class="card__stars"> 
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star blue"></i>
@@ -195,7 +195,7 @@
                                 <img class="card2__thumb__img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                                 <div>
                                     <h3>Hôtel le soleil du matin</h3>
-                                    <p >Nuit à partir de 96<em>€</em></p> 
+                                    <p >Nuit à partir de 96<strong>€</strong></p> 
                                     <div class="card__stars"> 
                                         <i class="fas fa-star blue"></i>
                                         <i class="fas fa-star blue"></i>
@@ -212,7 +212,7 @@
                             <img class="card2__thumb__img"  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             <div>
                                 <h3>Au coeur de l'eau Chambre d'hôtes</h3>
-                                <p >Nuit à partir de 96<em>€</em></p>
+                                <p >Nuit à partir de 96<strong>€</strong></p>
                                 <div class="card__stars"> 
                                     <i class="fas fa-star blue"></i>
                                     <i class="fas fa-star blue"></i>
@@ -228,7 +228,7 @@
                             <img class="card2__thumb__img"  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             <div>
                                 <h3>Hôtel Tout bleu et Blanc</h3>
-                                <p >Nuit à partir de 96<em>€</em></p> 
+                                <p >Nuit à partir de 96<strong>€</strong></p> 
                                 <div class="card__stars">
                                     <i class="fas fa-star blue"></i>
                                     <i class="fas fa-star blue"></i>
