--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     <img id="header__Logo__reservia" src="images/logo/Reservia@3x.png" alt="Reservia_reservation_hebergement_logo">
                 
             
-                <div class="header__menu__list__hoover"><a href="#hebergement"  title="Hébergement">Hébergement</a></div> 
-                <div class="header__menu__list__hoover"><a href="#activite" title="Activités">Activité</a></div> 
+                <div class="header__menu__list__hoover"><a class=hover href="#hebergement"  title="Hébergement">Hébergement</a></div> 
+                <div class="header__menu__list__hoover"><a class=hover href="#activite" title="Activités">Activité</a></div> 
                 <div ><a href="#" title="S'inscrire" id="log">S'inscrire</a>         </div>        
             </nav>
         </header>
         <section class="recherche">
-            <h1 class="recherche__titre">Trouvez votre hébergement pour des vacances de reve</br>
-                <span class="recherche__titre__span"> En plein centre ville ou en pleine nature</span></h1>
+            <h1 class="recherche__titre">Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p class=titre1>En plein centre ville ou en pleine nature</p>
             <form action="index.html">
                 <div class="recherche__location">
                     <i class="fas fa-map-marker-alt"></i>
@@ -50,7 +50,7 @@
                         <div class="recherche__filtre__fas">
                             <i class="fas fa-money-bill-wave"></i>
                         </div>
-                        <p class="recherche__filtre__text">Economique</p>
+                        <p class="recherche__filtre__text">&Eacute;conomique</p>
                     </div>
                     <div class="filters__contenaire__button">
                         <div class="recherche__filtre__fas">
@@ -68,7 +68,7 @@
                         <div class="recherche__filtre__fas">
                             <i class="fas fa-dog"></i>
                         </div>
-                        <p class="recherche__filtre__text">Animaux Autorisés</p>
+                        <p class="recherche__filtre__text">Animaux autorisés</p>
                     </div>
                 </div>
              </div>
@@ -76,7 +76,7 @@
                 <div class="information__fa">
                     <i class="fas fa-info"></i>
                 </div>
-                <p >Plus de 500 logements sont disponibles dans cette visite</p> <!-- le 500 viens pobablement du site -->
+                <p >Plus de 500 logements sont disponibles dans cette ville</p> <!-- le 500 viens pobablement du site -->
             </div>
         </section>
         <section class="global_hebergement">  
@@ -102,7 +102,7 @@
                     <article class="card1">
                         <a href="#">
                             <div class="card1__thumb"> 
-                                <img class="card1__thumb__img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                                <img class="card1__thumb__img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel du port</h3>
                             <p >Nuit à partir de 52<strong>€</strong></p>  
@@ -118,7 +118,7 @@
                     <article class="card1">
                         <a href="#">
                             <div class="card1__thumb"> 
-                                <img class="card1__thumb__img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                                <img class="card1__thumb__img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel Les mouettes</h3>
                             <p >Nuit à partir de 76<strong>€</strong></p>  
@@ -134,7 +134,7 @@
                     <article class="card1">
                         <a href="#">
                             <div class="card1__thumb"> 
-                                <img class="card1__thumb__img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                                <img class="card1__thumb__img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel de la mer</h3>
                             <p >Nuit à partir de 46<strong>€</strong></p>  
@@ -150,10 +150,10 @@
                     <article class="card1">
                         <a href="#">
                             <div class="card1__thumb">
-                                <img class="card1__thumb__img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                                <img class="card1__thumb__img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Auberge Le Panier</h3> 
-                            <p >Nuit à partir de 23<strong>€</strong></p>  
+                            <p >Nuit à partir de <strong>23€</strong></p>  
                             <div class="card__stars"> 
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star blue"></i>
@@ -166,7 +166,7 @@
                     <article class="card1">
                         <a href="#">                        
                             <div class="card1__thumb"> 
-                                <img class="card1__thumb__img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                                <img class="card1__thumb__img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" title="Cliquez pour agrandir" />
                             </div>
                             <h3>Hôtel chez Amina</h3> 
                             <p >Nuit à partir de 96<strong>€</strong></p> 
@@ -184,7 +184,7 @@
             </div>
             <div class="trend"> <!--<i class="fas fa-chart-line"></i>-->
                 <div class="trend__title">
-                    <h2 id=activite>Les plus populaire</h2>
+                    <h2 id=activite>Les plus populaires</h2>
                     <div class="trend_fa">
                         <i class="fas fa-chart-line"></i>
                     </div>
@@ -192,10 +192,10 @@
                 <div class="trend__art">
                     <a href="#">
                         <article class="card2">
-                                <img class="card2__thumb__img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                                <img class="card2__thumb__img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" title="Cliquez pour agrandir" />
                                 <div>
                                     <h3>Hôtel le soleil du matin</h3>
-                                    <p >Nuit à partir de 96<strong>€</strong></p> 
+                                    <p >Nuit à partir de 128<strong>€</strong></p> 
                                     <div class="card__stars"> 
                                         <i class="fas fa-star blue"></i>
                                         <i class="fas fa-star blue"></i>
@@ -209,10 +209,10 @@
                     </a>
                     <a href="#">
                         <article class="card2">
-                            <img class="card2__thumb__img"  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                            <img class="card2__thumb__img"  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambre d'hôtes" title="Cliquez pour agrandir" />
                             <div>
                                 <h3>Au coeur de l'eau Chambre d'hôtes</h3>
-                                <p >Nuit à partir de 96<strong>€</strong></p>
+                                <p >Nuit à partir de 71<strong>€</strong></p>
                                 <div class="card__stars"> 
                                     <i class="fas fa-star blue"></i>
                                     <i class="fas fa-star blue"></i>
@@ -225,10 +225,10 @@
                     </a>
                     <a href="#">
                         <article class="card2">
-                            <img class="card2__thumb__img"  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
+                            <img class="card2__thumb__img"  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel-Tout-bleu-et-Blanc" title="Cliquez pour agrandir" />
                             <div>
                                 <h3>Hôtel Tout bleu et Blanc</h3>
-                                <p >Nuit à partir de 96<strong>€</strong></p> 
+                                <p >Nuit à partir de 68<strong>€</strong></p> 
                                 <div class="card__stars">
                                     <i class="fas fa-star blue"></i>
                                     <i class="fas fa-star blue"></i>
